--- a/proyectos_admin/pubspec.yaml
+++ b/proyectos_admin/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   url_launcher: ^6.3.0
   mysql1: ^0.20.0
   crypto: ^3.0.3
+  firebase_storage: ^11.7.7
+  file_picker: ^8.0.0
 
 dev_dependencies:
   flutter_test:
