--- a/proyectos_cliente/pubspec.yaml
+++ b/proyectos_cliente/pubspec.yaml
@@ -1,7 +1,7 @@
 name: proyectos_cliente
 description: "Aplicacion para Concurso de proyectos de EPIS - Cliente"
 publish_to: 'none'
-version: 0.1.0
+version: 0.1.0+1
 
 environment:
   sdk: ^3.9.0
@@ -24,6 +24,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/cliente.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
